# contract-test-chain

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: erc20.rs  lib.rs  utility.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
