[[bin]]
name = 'contract-test-chain'
path = 'src/main.rs'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.contract-test-chain-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'bb68456966bf9d767651773dbaadd6787bce1884'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'contract-test-chain'
version = '1.0.0'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'
