[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'contract-test-chain-runtime-wasm'
version = '1.0.0'

[workspace]
members = []

[features]
default = []
std = ['contract-test-chain-runtime/std']
[dependencies.contract-test-chain-runtime]
default-features = false
path = '..'
